--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,109 +1,127 @@
 @import "../../global.scss";
 
-.intro{
-    background-color: white;
-    display: flex;
+.intro {
+  background-color: white;
+  display: flex;
 
-        @include mobile{
-            flex-direction: column;
-            align-items: center;
+  @include mobile {
+    flex-direction: column;
+    align-items: center;
+  }
+  .left {
+    flex: 0.5;
+    overflow: hidden;
+
+    .imgContainer {
+      width: 700px;
+      height: 700px;
+      background-color: crimson;
+      border-radius: 50%;
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
+      float: right;
+      overflow: hidden;
+
+      @include mobile {
+        align-items: flex-start;
+      }
+      img {
+        height: 95%;
+        margin-left: 40px;
+        cursor: pointer;
+        transition: all 2s ease;
+
+        &:hover {
+          transform: scale(1.1);
         }
-    .left{
-        flex: 0.5;
-        overflow: hidden;
 
-        .imgContainer{
-            width: 700px;
-            height: 700px;
-            background-color: crimson;
-            border-radius: 50%;
-            display: flex;
-            align-items: flex-end;
-            justify-content: center;
-            float: right;
-
-            @include mobile{
-                align-items: flex-start;
-            }
-            img{
-                height: 90%;
-
-                @include mobile{
-                    height: 50%;
-                }
-            }
+        @include mobile {
+          height: 50%;
         }
+      }
+    }
+  }
+
+  .right {
+    flex: 0.5;
+    position: relative;
+
+    .wrapper {
+      height: 100%;
+      width: 100%;
+      padding-left: 50px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      @include mobile {
+        padding-left: 0;
+        align-items: center;
+      }
+
+      h1 {
+        font-size: 60px;
+        margin: 10px 0;
+
+        @include mobile {
+          font-size: 40px;
+        }
+      }
+      h2 {
+        font-size: 35px;
+      }
+      h3 {
+        font-size: 30px;
+
+        @include mobile {
+          font-size: 20px;
+        }
+
+        span {
+          font-size: inherit;
+          color: crimson;
+        }
+
+        .ityped-cursor {
+          animation: blink 1s infinite;
+        }
+        @keyframes blink {
+          50% {
+            opacity: 1;
+          }
+          100% {
+            opacity: 0;
+          }
+        }
+      }
     }
 
-    .right{
-        flex: 0.5;
-        position: relative;
+    a {
+      position: absolute;
+      bottom: 10px;
+      left: 40%;
 
-        .wrapper{
-            height: 100%;
-            width: 100%;
-            padding-left: 50px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
+      .arrowDown {
+        width: 80px;
+        height: 80px;
+        color: crimson;
+        animation: arrowBlink 2s infinite;
+        transition: all 1s ease;
 
-            @include mobile{
-                padding-left: 0;
-                align-items: center;
-            }
-
-            h1{
-                font-size: 60px;
-                margin: 10px 0;
-
-                @include mobile{
-                    font-size: 40px;
-                }
-            }
-            h2{
-                font-size: 35px;
-            }
-            h3{
-                font-size: 30px;
-
-                @include mobile{
-                    font-size: 20px;
-                }
-
-                span{
-                    font-size: inherit;
-                    color: crimson;
-                }
-
-                .ityped-cursor{
-                    animation: blink 1s infinite;
-                }
-                @keyframes blink {
-                    50%{
-                        opacity: 1;
-                    }
-                    100%{
-                        opacity: 0;
-                    }
-                }
-            }
+        &:hover {
+          transform: scale(1.1);
         }
+      }
 
-        a{
-            position: absolute;
-            bottom: 10px;
-            left: 40%;
-
-            img{
-                width: 30px;
-                animation: arrowBlink 2s infinite;
-            }
-
-            @keyframes arrowBlink {
-                100%{
-                    opacity: 0;
-                }
-            }
+      @keyframes arrowBlink {
+        50% {
+          opacity: 0.5;
         }
+        100% {
+          opacity: 1;
+        }
+      }
     }
+  }
 }
