--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,80 +1,156 @@
 @import "../../global.scss";
 
-.contact{
-    background-color: white;
+.contact {
+  background-color: $lightBlackBg;
+  overflow: hidden;
+  color: white;
+
+  @include mobile {
+    flex-direction: column;
+  }
+
+  .wrapper {
     display: flex;
+    height: 90%;
 
-    @include mobile{
-        flex-direction: column;
+    .left {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+
+      h2 {
+        overflow-y: hidden;
+        padding: 40px 0 0 60px;
+      }
+
+      h3 {
+        overflow-y: hidden;
+        padding: 20px 0 20px 60px;
+      }
+
+      img {
+        height: 80%;
+        overflow-y: hidden;
+        background-color: white;
+        border-radius: 50%;
+      }
     }
+    .right {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
 
-    .left{
-        flex: 1;
-        overflow: hidden;
+      h2 {
+        font-size: 30px;
+      }
 
-        img{
-            height: 100%;
-        }
-    }
-    .right{
-        flex: 1;
+      form {
+        width: 100%;
+        height: 80%;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
 
-        h2{
-            font-size: 30px;
+        input {
+          width: 400px;
+          height: 30px;
+          font-size: 14px;
+          margin-top: 20px;
+          padding: 5px 0 5px 15px;
+          border-radius: 8px;
+          border-width: 0px;
+
+          @include mobile {
+            width: 200px;
+            height: 20px;
+          }
+
+          &:focus {
+            outline: none;
+          }
         }
 
-        form{
-            width: 70%;
-            height: 70%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-around;
+        textarea {
+          width: 400px;
+          height: 200px;
+          font-size: 14px;
+          margin-top: 20px;
+          padding: 15px 0 5px 15px;
+          border-radius: 8px;
+          border-width: 0px;
 
-            input{
-                width: 300px;
-                height: 30px;
-                font-size: 14px;
+          @include mobile {
+            width: 200px;
+            height: 100px;
+          }
 
-                @include mobile{
-                    width: 200px;
-                    height: 20px;
-                }
-            }
-
-            textarea{
-                width: 300px;
-                height: 200px;
-                font-size: 14px;
-
-                @include mobile{
-                    width: 200px;
-                    height: 100px;
-                }
-            }
-
-            button{
-                width: 150px;
-                height: 30px;
-                color: whitesmoke;
-                background-color: crimson;
-                border: none;
-                border-radius: 10px;
-                font-weight: 500;
-                cursor: pointer;
-
-                &:focus{
-                    outline: none;
-                }
-            }
-
-            span{
-                color: green;
-            }
+          &:focus {
+            outline: none;
+          }
         }
+
+        button {
+          width: 20%;
+          color: white;
+          background-color: crimson;
+          border: none;
+          border-radius: 5px;
+          padding: 7px 12px;
+          font-size: 20px;
+          font-weight: 700;
+          margin-top: 20px;
+          cursor: pointer;
+          border: 2px solid crimson;
+          transition: all 0.5s ease;
+          overflow: hidden;
+
+          .submit {
+            vertical-align: text-bottom;
+            font-size: 25px;
+          }
+
+          &:hover {
+            background-color: transparent;
+            color: white;
+          }
+          &:focus {
+            outline: none;
+          }
+        }
+
+        span {
+          color: green;
+          padding-top: 10px;
+        }
+      }
     }
+  }
+
+  .footer {
+    text-align: center;
+    color: black;
+    padding: 20px 0;
+    background-color: white;
+
+    h3 {
+      font-size: 18px;
+      font-weight: 400;
+
+      a {
+        text-decoration: none;
+        color: crimson;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+
+      .copy {
+        vertical-align: text-bottom;
+        font-size: 22px;
+      }
+    }
+  }
 }
