--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -22,11 +22,21 @@
             align-items: center;
 
             .logo{
+                font-family: 'Dancing Script', cursive;
                 font-size: 40px;
                 font-weight: 700;
-                text-decoration: none;
                 color: inherit;
+                text-decoration: none;
                 margin-right: 40px;
+
+                &:hover{
+                    color: crimson;
+                }
+
+                span{
+                    font-family: 'Dancing Script', cursive;
+                    color: crimson;
+                }
             }
 
             .itemContainer{
@@ -40,7 +50,6 @@
                 .icon{
                     font-size: 18px;
                     margin-right: 5px;
-                    cursor: pointer;
 
                     &:hover{
                         color: crimson;
