--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -11,13 +11,13 @@
 
   .wrapper {
     display: flex;
-    height: 90%;
+    height: 94%;
 
     .left {
       flex: 1;
       display: flex;
       flex-direction: column;
-
+      margin-top: 50px;
       h2 {
         overflow-y: hidden;
         padding: 40px 0 0 60px;
@@ -41,7 +41,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-
+      margin-top: 50px;
       h2 {
         font-size: 30px;
       }
@@ -131,7 +131,8 @@
   .footer {
     text-align: center;
     color: black;
-    padding: 20px 0;
+    padding: 10px 0;
+
     background-color: white;
 
     h3 {
