--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -12,7 +12,7 @@
     font-size: 50px;
     font-weight: 700;
     position: absolute;
-    top: 10px;
+    top: 90px;
   }
 
   .container {
@@ -26,6 +26,7 @@
       flex-direction: column;
       width: 50%;
       padding-left: 50px;
+      margin-top: 50px;
 
       h2 {
         font-size: 25px;
@@ -72,7 +73,7 @@
       flex-wrap: wrap;
       width: 50%;
       padding: 0 50px 0 50px;
-
+      margin-top: 50px;
       font-size: 80px;
 
       .icon {
