--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -13,19 +13,20 @@
         overflow: hidden;
 
         .imgContainer{
-            width: 700px;
-            height: 700px;
+            width: 600px;
+            height: 600px;
             background-color: crimson;
             border-radius: 50%;
             display: flex;
             align-items: flex-end;
             justify-content: center;
-            float: right;
+            float: left;
 
             @include mobile{
                 align-items: flex-start;
             }
             img{
+                width: 100%;
                 height: 90%;
 
                 @include mobile{
